add to firebase

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
     "vue": "^2.6.11",
-    "vuefire": "^2.2.5",
+    "vuefire": "^3.0.0-alpha.2",
     "vuetify": "^2.4.0"
   },
   "devDependencies": {
